[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/ExplosiveCan.png" type="Texture" id=1]
[ext_resource path="res://scripts/ExplosiveCan.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 64, 64 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 48, 48 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 32, 32 )

[node name="ExplosiveCan" type="StaticBody2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="BigArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BigArea"]
shape = SubResource( 2 )

[node name="MediumArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MediumArea"]
shape = SubResource( 3 )

[node name="SmallArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SmallArea"]
shape = SubResource( 4 )

[connection signal="body_entered" from="BigArea" to="." method="_on_small_body_entered"]
[connection signal="body_exited" from="BigArea" to="." method="_on_small_body_exited"]
[connection signal="body_entered" from="MediumArea" to="." method="_on_medium_body_entered"]
[connection signal="body_exited" from="MediumArea" to="." method="_on_medium_body_exited"]
[connection signal="body_entered" from="SmallArea" to="." method="_on_big_body_entered"]
[connection signal="body_exited" from="SmallArea" to="." method="_on_big_body_exited"]
